--- a/dev/00-intro/02-03-export.html
+++ b/dev/00-intro/02-03-export.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Post-process - ReadStor</title>
+        <title>Export - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-00-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/02-01-global.html"><strong aria-hidden="true">1.2.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../00-intro/02-01-filter.html"><strong aria-hidden="true">1.2.2.</strong> Filter</a></li><li class="chapter-item expanded "><a href="../00-intro/02-02-template.html"><strong aria-hidden="true">1.2.3.</strong> Template</a></li><li class="chapter-item expanded "><a href="../00-intro/02-03-preprocess.html"><strong aria-hidden="true">1.2.4.</strong> Pre-process</a></li><li class="chapter-item expanded "><a href="../00-intro/02-04-postprocess.html" class="active"><strong aria-hidden="true">1.2.5.</strong> Post-process</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-00-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/02-01-global.html"><strong aria-hidden="true">1.2.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../00-intro/02-02-render.html"><strong aria-hidden="true">1.2.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../00-intro/02-03-export.html" class="active"><strong aria-hidden="true">1.2.3.</strong> Export</a></li><li class="chapter-item expanded "><a href="../00-intro/02-04-backup.html"><strong aria-hidden="true">1.2.4.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../00-intro/02-05-filter.html"><strong aria-hidden="true">1.2.5.</strong> Filter</a></li><li class="chapter-item expanded "><a href="../00-intro/02-06-preprocess.html"><strong aria-hidden="true">1.2.6.</strong> Pre-process</a></li><li class="chapter-item expanded "><a href="../00-intro/02-07-postprocess.html"><strong aria-hidden="true">1.2.7.</strong> Post-process</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/00-intro/02-04-postprocess.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/00-intro/02-03-export.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,37 +148,30 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="post-process"><a class="header" href="#post-process">Post-process</a></h1>
-<p>The following options affect only the <a href="./01-commands.html#render"><code>render</code></a> command.</p>
-<h2 id="--trim-blocks"><a class="header" href="#--trim-blocks"><code>--trim-blocks</code></a></h2>
-<p>Trim any blocks left after rendering.</p>
-<blockquote>
-<p><i class="fa fa-exclamation-circle"></i> Currently, this is a <em>very</em> naive
-implementation that mimics what <a href="https://docs.rs/tera/latest/tera/"><code>tera</code></a> might do if/when it adds
-<a href="https://github.com/Keats/tera/issues/637"><code>trim_blocks</code></a>. It is by no means smart and will just normalize
-whitespace regardless of what the template requested.</p>
-</blockquote>
-<h2 id="--wrap-text"><a class="header" href="#--wrap-text"><code>--wrap-text</code></a></h2>
-<p>Wrap text to a maximum character width.</p>
-<p>Maximum line length is not guaranteed as long words are not broken if their
-length exceeds the maximum. Hyphenation is not used, however, existing hyphen
-can be split on to insert a line-break.</p>
-<blockquote>
-<p><i class="fa fa-exclamation-circle"></i> This will naively wrap all the
-text inside a rendered file regardless its structure. Use with caution!
-Extremely low values may cause unexpected results. Values above <code>80</code> or so
-are recommended.</p>
-</blockquote>
+                        <h1 id="export"><a class="header" href="#export">Export</a></h1>
+<p>The following options affect only the <a href="./01-commands.html#export"><code>export</code></a> commands.</p>
+<h2 id="--directory-template-template"><a class="header" href="#--directory-template-template"><code>--directory-template &lt;TEMPLATE&gt;</code></a></h2>
+<p>Set the output directory template.</p>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
+<tr><td>Context</td><td><a href="../01-templates/06-01-book.html"><code>book</code></a></td></tr>
+<tr><td>Default</td><td><code>{{ book.author }} - {{ book.title }}</code></td></tr>
+<tr><td>Example</td><td><code>Robert Henri - The Art Spirit</code></td></tr>
+</tbody></table>
+</div>
+<h2 id="--overwrite-existing"><a class="header" href="#--overwrite-existing"><code>--overwrite-existing</code></a></h2>
+<p>Overwrite existing files.</p>
+<p>By default, exising files are left as is. With this flag, existing files are
+overwritten if they are re-exported.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../00-intro/02-03-preprocess.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../00-intro/02-02-render.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../01-templates/00-templates.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../00-intro/02-04-backup.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -188,11 +181,11 @@ are recommended.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../00-intro/02-03-preprocess.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../00-intro/02-02-render.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../01-templates/00-templates.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../00-intro/02-04-backup.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
